--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@google-cloud/storage": "^7.12.0",
-    "cloudinary": "^2.4.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "uuid": "^9.0.1"
   },
