--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@react-email/components": "^0.0.24",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
