--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Confiserie-Sucre-Rose",
   "version": "1.0.0",
-  "proxy": "http://localhost:8000",
+  "proxy": "confiserie-sucre-rose-backend-7a5a5woe0-gmorin98s-projects.vercel.app",
   "main": "index.js",
   "repository": "https://github.com/Gmorin98/ConfiserieSucreRose",
   "author": "Gabriel Morin <gabriel.morin98@gmail.com>",
