--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "Confiserie-Sucre-Rose",
   "version": "1.0.0",
   "main": "index.js",
+  "proxy": "http://localhost:8000",
   "repository": "https://github.com/Gmorin98/ConfiserieSucreRose",
   "author": "Gabriel Morin <gabriel.morin98@gmail.com>",
   "license": "MIT",
@@ -14,7 +15,6 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
-    "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "styled-components": "^6.1.8"
   },
