--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@aws-sdk/client-ses": "^3.637.0",
+    "@vercel/blob": "^0.24.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
