--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
+    "react-dom": "^18.3.1",
+    "resend": "^4.0.0",
     "stripe": "^16.9.0",
     "uuid": "^10.0.0"
   },
