--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "strip-ansi": "5.2.0",
     "styled-components": "^6.1.8"
   },
   "scripts": {
